# dev-productivity-claude

./: .gitconfig  .npmrc  CLAUDE.md  Microsoft.PowerShell_profile.ps1  README.md  extensions.json  pyproject.toml
aliases/: ai.ps1  aws.ps1  dev.ps1  docker.ps1  git.ps1  security.ps1  sysadmin.ps1
aws/: config
docker/: daemon.json  docker-compose.base.yml
git/: .gitignore_global
node/: .nvmrc
vscode/: extensions.json  settings.json
