# ============================================================
#  pyproject.toml — plantilla para proyectos Python
# ============================================================

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "nombre-proyecto"
version     = "0.1.0"
description = "Descripción del proyecto"
readme      = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "isort",
    "ruff",
    "mypy",
    "pre-commit"
]

# ── Black ─────────────────────────────────────────────────────
[tool.black]
line-length    = 120
target-version = ["py311"]
skip-string-normalization = false

# ── isort ─────────────────────────────────────────────────────
[tool.isort]
profile          = "black"
line_length      = 120
known_third_party = []

# ── Ruff (linter) ────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "W", "I", "N", "B", "S", "UP"]
ignore = ["S101", "B008"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "B"]

# ── mypy (type checking) ────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict         = false
ignore_missing_imports = true

# ── pytest ───────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "-v --cov=src --cov-report=term-missing"
